--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,31 +1,13 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: black;
-}
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: black;
-    --foreground: #ededed;
-  }
-}
 
 html {
   scroll-behavior: smooth;
 }
 
 body {
-  background: var(--background);
+  background-color: black;
   scroll-behavior: smooth;
-  color: var(--foreground);
+  color: white;
   font-family: Arial, Helvetica, sans-serif;
 }
